src/index.css
/* ... */
/* .t-navi {
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    transition: right .4s;
} */

div.tracker-nav {
    display: grid;
    margin: 2rem auto;
    align-items: center;
    columns: 2 100px;
}

/* Show menu */
.show-menu {
    right: 0;
}

/* HOME */
.home {
    width: 100%;
    min-height: 100vh;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(17rem, auto));
    align-items: center;
    gap: 1.5rem;
}

.home-text h1 {
    text-align: left;
    color: var(--milk-foam);
    font-family: var(--title-font);
    font-size: 3.4rem;
    letter-spacing: 1px;
}

.main .home-text {
    position: absolute;
    top: 13%;
    left: 40%;
    transform: translate(-50%, -50%);
    text-align: left;
    color: var(--milk-foam);
    z-index: 1;
  }

.home-btn {
    display: inline-block;
    background: linear-gradient(180deg,
            var(--creamy-latte),
            var(--caramel));
    padding: 1rem 3rem;
    border-radius: 4rem;
    color: var(--espresso-brown);
    font-weight: var(--font-semi-bold);
    box-shadow: 0 8px 32px hsla(340, 23%, 18% .3),
        inset 0 4px 8px hsla(32, 46% 95% .4);
}

/* HOME-Order section */
.section1 {
    height: 700px;
    display: inline-block;
    width: 100%;
}
.section2 {
    height: 700px;
    background: var(--cappuccino);
    display: inline-block;
    width: 100%;
}
.section3 {
    height: 700px;
    background: var(--creamy-latte);
    color: var(--espresso-brown);
    display: inline-block;
    width: 100%;
}
.section4 {
    height: 700px;
    background: var(--mint);
    color: var(--espresso-brown);
    display: inline-block;
    width: 100%;
} 

/* HOME Quiz Section */
.quiz {
    width: 100%;
    min-height: 100vh;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: right;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(17rem, auto));
    align-items: center;
    gap: 1.5rem;
}

.quiz-text h1 {
    color: var(--espresso-brown);
    font-family: var(--title-font);
    font-size: 2.5rem;
    letter-spacing: 1px;
    text-align: left;
}

.quiz-btn {
    display: inline-block;
    background: linear-gradient(180deg,
            var(--espresso-brown),
            var(--espresso-brown));
    padding: 1rem 3rem;
    border-radius: 4rem;
    color: var(--creamy-latte);
    font-weight: var(--font-semi-bold);
    box-shadow: 0 8px 32px hsla(340, 23%, 18% .3),
        inset 0 4px 8px hsla(32, 46% 95% .4);
}



/* Tracker page */
.inputs {
    margin: auto;
    width: auto;
    padding-left: 10%;
    padding-right: 10%;
}

.tag {
    display: inline-block;
    background-color: var(--c-titan-white);
    color: var(--c-indigo);
    font-weight: 600;
    font-size: 0.875rem;
    padding: 0.5em 0.75em;
    line-height: 1;
    border-radius: 6px;
    & + * {
        margin-top: 1rem;
    }
}

.tracker {
    background-color: var(--creamy-latte);
    color: var(--espresso-brown);
}

.trackHeader {
    margin-top: 100px;
    margin-left: 90px;
    margin-bottom: 25px;
    color: var(--espresso-brown);
}

div.tracker-nav{
    display: flex;
    flex-wrap: wrap;
}

.tracker-buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-grow: 1;
}

.t-button {
    background-color: var(--espresso-brown);
    border-radius: 12px;
    margin-right: 30px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.t-button:selection {
    background-color: var(--cappuccino);
}

.content-navi {
    padding: 25px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.content-navi:hover {
    background-color: var(--cappuccino);
    border-radius: 12px;
}

.content-navi:selection {
    background-color: var(--cappuccino);
}

.text-navi {
    color: var(--creamy-latte);
}

.cal {
    margin-top: 100px;
    max-width: 70%;
    margin-left: auto;
    margin-right: auto;
}

p.tracker {
    font-size: 20px;
    color: var(--espresso-brown);
}

/* Tracker page - logging coffee */
.logging {
    display: grid;
    grid-row: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 90px;
    margin-right: 90px;
    padding: 20px;
    box-sizing: border-box;
    justify-content: center;
}

div.tracker {
    display: grid;
    grid-row: auto;
    padding-bottom: 20px;
}

p.tracker {
    padding-bottom: 2px;
}

p.explanation {
    font-style: italic;
    font-size: 14px;
    padding-bottom: 5px;
}

div.uploadImg {
    display: grid;
    grid-row: auto;
    justify-content: center;
    margin: 90px;
}

.t-cup {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    max-width: 300px;
    padding-bottom: 20px;
    padding-top: 20px;
}

/* CARDS! */

.sectionTracker {
    margin-top: 0.5rem;
}
.allCards p {
	margin-bottom: 0.5rem;
	margin-top: 0.5rem;
}

.allCards {
	display: flex;
	flex-wrap: wrap;
	align-items: flex-start;
	flex-wrap: wrap;
	justify-content: center;
	gap: 2.5rem;
	margin: 5vh auto;
}

.user-attribute {
    display: flex;
	padding-bottom: 1em;
	border-bottom: 2px solid #C7A27A;
    width: 100%;
}

.avatar {
    width: 3em;
    border-radius: 150px;
    margin-right: 1em;
}

.card h2 {
    font-size: 2rem;
}

.avatarUsername {
    display: inline-flex;
	align-items: center;
	justify-content: center;
}

.card {
	background-color: #fff;
    color: var(--espresso-brown);
	padding: 1.5rem;
	border-radius: 16px;
	max-width: 350px;
}

/* .tags {
	margin-top: 1rem;
	margin-bottom: .5rem;
} */

.tag {
	display: inline-block;
	background-color: var(--creamy-latte);
	color: var(--dark-roast);
	font-size: 0.875rem;
	padding: 0.5em 0.75em;
	line-height: 1;
	border-radius: 8px;
	margin-bottom: .5rem;
    margin-right: .5rem;
}

.coffeeimg {
	margin-top: 1rem;
	margin-bottom: 1rem;
}
/* ... */

